# internal/transport/router.go
@@ -18,12 +18,15 @@ func (s *Server) SetupRoutes() *echo.Group {
 
 	v1.POST("/user", s.handler.User.Create)
 	v1.GET("/user", s.handler.User.Get, s.jwt.ValidateAuth)
+	v1.POST("/user/password", s.handler.User.ChangePassword, s.jwt.ValidateAuth)
+
 	v1.POST("/auth", s.handler.User.Auth)
 
 	v1.GET("/getHasBookUsers", s.handler.Borrow.GetNotReturned)
 	v1.GET("/getLastMonthly", s.handler.Borrow.GetByLastMonth)
 
-	v1.POST("/user/password", s.handler.User.ChangePassword, s.jwt.ValidateAuth)
+	v1.POST("/transaction", s.handler.Transction.Create, s.jwt.ValidateAuth)
+	v1.DELETE("/transaction/:id", s.handler.Transction.Cancel, s.jwt.ValidateAuth)
 
 	s.App.GET("/swagger/*", echoSwagger.WrapHandler)
 
